// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ErrorSection /> should render custom error message when message prop is provided 1`] = `
<div
  aria-live="assertive"
  class="errorMessage"
  role="alert"
>
  <p>
    Erro de formatação:CNJ inválido.
  </p>
</div>
`;

exports[`<ErrorSection /> should render default error message when no message prop is provided 1`] = `
<div
  aria-live="assertive"
  class="errorMessage"
  role="alert"
>
  <p>
    Erro ao carregar resultados. Por favor, tente novamente.
  </p>
</div>
`;
